[package]
name = "Convert4Web3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
rand = "0.8.5"

chrono = "0.4.26"
bigdecimal = "0.4.1"

hex = "0.4.3"
base58 = "0.2.0"
digest = "0.10.7"
sha2 = "0.10.7"
sha3 = "0.10.8"

rlp = "0.5.2"